<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/sclayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:id="@+id/layout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:padding="10dip"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
    />
    <Spinner android:id="@+id/spinnerStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
    />
      <TextView
        android:layout_width="fill_parent"
        android:layout_marginTop="10dip"
        android:layout_height="wrap_content"
        android:text="@string/custom_status"
    />
    <CheckBox android:id="@+id/chkCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_custom_status" />        
    <EditText android:id="@+id/txtCustom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_status"
    />
    	   
   	    <Button android:id="@+id/btnSetStatus"
	        android:text="@string/btn_set_status"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>     
    </LinearLayout>
   
</ScrollView>
