<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:scrollbars="vertical">

	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<RadioGroup android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="vertical"
			android:checkedButton="@+id/radConfExisting" android:paddingTop="10dip"
			android:id="@+id/groupConfSelection">

			<RadioButton android:text="@string/radio_conf_existing"
				android:id="@+id/radConfExisting" />

			<Spinner android:id="@+id/spinnerConf"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:drawSelectorOnTop="true" />

			<RadioButton android:text="@string/radio_conf_custom"
				android:layout_marginTop="15dip" android:id="@+id/radConfCustom" />

			<EditText android:id="@+id/conf_room_name"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
				
			<TextView android:paddingTop="20px"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/conference_message" />

			<EditText android:id="@+id/conf_message"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />

			<Button android:id="@+id/btn_create_conference"
				android:text="@string/btn_create_conf"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</RadioGroup>
	</LinearLayout>
</ScrollView>
